// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`join paths > join(AbsDir { path: Abs { segments: [ 'home' ], _tag: 'PathAbs' }, _tag: 'LocAbsDir' ..., RelDir { path: Rel { segments: [ 'documents' ], _tag: 'PathRelative' }, _tag: 'L...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
AbsDir {
  path: Abs {
    segments: [ 'home' ],
    _tag: 'PathAbs'
  },
  _tag: 'LocAbsDir'
}
────────────────────────────────────────────────────
RelDir {
  path: Rel {
    segments: [ 'documents' ],
    _tag: 'PathRelative'
  },
  _tag: 'LocRelDir'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
AbsDir {
  path: Abs {
    segments: [ 'home', 'documents' ],
    _tag: 'PathAbs'
  },
  _tag: 'LocAbsDir'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join(AbsDir { path: Abs { segments: [ 'home' ], _tag: 'PathAbs' }, _tag: 'LocAbsDir' ..., RelFile { path: Rel { segments: [], _tag: 'PathRelative' }, file: File { stem: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
AbsDir {
  path: Abs {
    segments: [ 'home' ],
    _tag: 'PathAbs'
  },
  _tag: 'LocAbsDir'
}
────────────────────────────────────────────────────
RelFile {
  path: Rel {
    segments: [],
    _tag: 'PathRelative'
  },
  file: File {
    stem: 'file',
    extension: '.txt',
    _tag: 'File'
  },
  _tag: 'LocRelFile'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
AbsFile {
  path: Abs {
    segments: [ 'home' ],
    _tag: 'PathAbs'
  },
  file: File {
    stem: 'file',
    extension: '.txt',
    _tag: 'File'
  },
  _tag: 'LocAbsFile'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join(AbsDir { path: Abs { segments: [], _tag: 'PathAbs' }, _tag: 'LocAbsDir' }, RelDir { path: Rel { segments: [ 'home' ], _tag: 'PathRelative' }, _tag: 'LocRel...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
AbsDir {
  path: Abs {
    segments: [],
    _tag: 'PathAbs'
  },
  _tag: 'LocAbsDir'
}
────────────────────────────────────────────────────
RelDir {
  path: Rel {
    segments: [ 'home' ],
    _tag: 'PathRelative'
  },
  _tag: 'LocRelDir'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
AbsDir {
  path: Abs {
    segments: [ 'home' ],
    _tag: 'PathAbs'
  },
  _tag: 'LocAbsDir'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join(AbsDir { path: Abs { segments: [], _tag: 'PathAbs' }, _tag: 'LocAbsDir' }, RelFile { path: Rel { segments: [], _tag: 'PathRelative' }, file: File { stem: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
AbsDir {
  path: Abs {
    segments: [],
    _tag: 'PathAbs'
  },
  _tag: 'LocAbsDir'
}
────────────────────────────────────────────────────
RelFile {
  path: Rel {
    segments: [],
    _tag: 'PathRelative'
  },
  file: File {
    stem: 'file',
    extension: '.txt',
    _tag: 'File'
  },
  _tag: 'LocRelFile'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
AbsFile {
  path: Abs {
    segments: [],
    _tag: 'PathAbs'
  },
  file: File {
    stem: 'file',
    extension: '.txt',
    _tag: 'File'
  },
  _tag: 'LocAbsFile'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join(RelDir { path: Rel { segments: [ '..' ], _tag: 'PathRelative' }, _tag: 'LocRelDi..., RelFile { path: Rel { segments: [ 'lib' ], _tag: 'PathRelative' }, file: File { ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
RelDir {
  path: Rel {
    segments: [ '..' ],
    _tag: 'PathRelative'
  },
  _tag: 'LocRelDir'
}
────────────────────────────────────────────────────
RelFile {
  path: Rel {
    segments: [ 'lib' ],
    _tag: 'PathRelative'
  },
  file: File {
    stem: 'utils',
    extension: '.js',
    _tag: 'File'
  },
  _tag: 'LocRelFile'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
RelFile {
  path: Rel {
    segments: [ 'lib' ],
    _tag: 'PathRelative'
  },
  file: File {
    stem: 'utils',
    extension: '.js',
    _tag: 'File'
  },
  _tag: 'LocRelFile'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join(RelDir { path: Rel { segments: [ 'src' ], _tag: 'PathRelative' }, _tag: 'LocRelD..., RelDir { path: Rel { segments: [ 'components' ], _tag: 'PathRelative' }, _tag: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
RelDir {
  path: Rel {
    segments: [ 'src' ],
    _tag: 'PathRelative'
  },
  _tag: 'LocRelDir'
}
────────────────────────────────────────────────────
RelDir {
  path: Rel {
    segments: [ 'components' ],
    _tag: 'PathRelative'
  },
  _tag: 'LocRelDir'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
RelDir {
  path: Rel {
    segments: [ 'src', 'components' ],
    _tag: 'PathRelative'
  },
  _tag: 'LocRelDir'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join(RelDir { path: Rel { segments: [ 'src' ], _tag: 'PathRelative' }, _tag: 'LocRelD..., RelFile { path: Rel { segments: [ '..', 'test' ], _tag: 'PathRelative' }, file: ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
RelDir {
  path: Rel {
    segments: [ 'src' ],
    _tag: 'PathRelative'
  },
  _tag: 'LocRelDir'
}
────────────────────────────────────────────────────
RelFile {
  path: Rel {
    segments: [ '..', 'test' ],
    _tag: 'PathRelative'
  },
  file: File {
    stem: 'file',
    extension: '.ts',
    _tag: 'File'
  },
  _tag: 'LocRelFile'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
RelFile {
  path: Rel {
    segments: [ 'test' ],
    _tag: 'PathRelative'
  },
  file: File {
    stem: 'file',
    extension: '.ts',
    _tag: 'File'
  },
  _tag: 'LocRelFile'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`join paths > join(RelDir { path: Rel { segments: [ 'src' ], _tag: 'PathRelative' }, _tag: 'LocRelD..., RelFile { path: Rel { segments: [], _tag: 'PathRelative' }, file: File { stem: '...) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
RelDir {
  path: Rel {
    segments: [ 'src' ],
    _tag: 'PathRelative'
  },
  _tag: 'LocRelDir'
}
────────────────────────────────────────────────────
RelFile {
  path: Rel {
    segments: [],
    _tag: 'PathRelative'
  },
  file: File {
    stem: 'index',
    extension: '.ts',
    _tag: 'File'
  },
  _tag: 'LocRelFile'
}
╠══════════════════════════════════════════════════╣ THEN RETURNS OBJECT
RelFile {
  path: Rel {
    segments: [ 'src' ],
    _tag: 'PathRelative'
  },
  file: File {
    stem: 'index',
    extension: '.ts',
    _tag: 'File'
  },
  _tag: 'LocRelFile'
}
╚══════════════════════════════════════════════════╝"
`;
